Changed: keydown and keyup part insted of , keypress (when down red when up white) Added: word checking part , after pressing eneter checking value are equal or not Changed: now ajax response is array which is contained file text

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,11 @@
     display: grid;
     width: 100%;
 }
+
+.active {
+    background-color: #966f6f;
+}
+
 #text_field{
     /*scroll-behavior: auto;*/
     white-space: pre-wrap;
